# amdion-computer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  build-dmg.sh  gemini.js  icon.icns  index.html  main.js  package-lock.json  package.json  preload.js
.github/workflows/: release.yml
docs/: DEPLOYMENT.md  DEV.md  ROADMAP.md  V1.md  reader-preview.html
extension/: README.md  background.js  blocked.html  manifest.json  popup.html  popup.js  walkthrough.html  walkthrough.js
extension/content/: declutter.css  nudge.js  reader.js  reshape.js
extension/core/: background.js  block.js  bridge.js  nudge.js  registry.js
extension/features/notes/: background.js  capture.js
extension/features/present/: background.js
extension/features/read-mode/: background.js
extension/features/reshape/: background.js  declutter.css  feedfade.js  nudge-triggers.js  reshape.js  ytdrift.js
frontend/: bridge.js  index.html
observer-mvp/: gemini.js  index.html  list_models.js  main.js  package.json
scripts/: dev-clean.sh  reset-data.sh  reset-hard.sh
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge_ws.rs  classify.rs  config.rs  db.rs  gemini.rs  lib.rs  main.rs  sensing.rs  state.rs
src-tauri/src/commands/: attention.rs  browser.rs  chat.rs  config.rs  mod.rs  notes.rs  observer.rs  read.rs  session.rs  shortcut.rs  tuning.rs  updater.rs
