[package]
name = "amdion-computer"
version = "1.0.0"
edition = "2021"

[lib]
name = "amdion_computer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
chrono = "0.4"
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
xcap = "0.9"
url = "2"
lazy_static = "1"
# Localhost WebSocket bridge to the Chrome extension (Step 2). Plain ws:// on
# loopback — no TLS features.
tokio-tungstenite = "0.24"
futures-util = "0.3"
rand = "0.8"
