[package]
name = "amdion-computer"
version = "1.0.0"
edition = "2021"

[lib]
name = "amdion_computer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
# Silent in-app auto-update (checks GitHub Releases on launch; verifies the
# minisign signature against the pubkey in tauri.conf.json before installing).
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
chrono = "0.4"
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
xcap = "0.9"
url = "2"
lazy_static = "1"
# Localhost WebSocket bridge to the Chrome extension (Step 2). Plain ws:// on
# loopback — no TLS features.
tokio-tungstenite = "0.24"
futures-util = "0.3"
rand = "0.8"

# Sensing engine (Step 3): frontmost-app polling via NSWorkspace. Already in the
# lock tree transitively, so promoting it costs no extra build. Idle time uses a
# raw CoreGraphics `extern` declared in sensing.rs (no crate exposes it). Both
# need no Accessibility/Screen-Recording permission.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
